--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-   
-    <h1> INFORMATIKA </h1>
-    <h2> Belajar Membuat Website dengan HTML, CSS, dan Layout </h2>
+
+	<div class="header">
+      <h2> Belajar Membuat Website dengan HTML, CSS, dan Layout </h2>
+	</div>
+	  
        <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
@@ -36,3 +38,4 @@
             <p>Valleya Prabadhani Untoro</p>
   </body>
 </html>
+
